@@ -1,3 +1,10 @@
+2008-01-07 Braden McDaniel  <braden@endoframe.com>
+
+	Doc-comment fixes and improvements.
+
+	* src/libopenvrml/openvrml/viewer.cpp
+	* src/libopenvrml/openvrml/browser.cpp
+
 2007-01-06 Braden McDaniel  <braden@endoframe.com>
 
 	Updates for 0.17.1 release.
